--- a/index.html
+++ b/index.html
@@ -4,8 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather Dashboard</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
+
+
 <body>
+
+
+  <!-- Header --> 
+
+  <h1>Weather Dashboard</h1>
+  <!-- Searh bar plus history-->
+  <!-- Forecast for the choosen city-->
+  <!-- 5 day forecast-->
+
+  <!-- Nice addition is a current location or set the forecast to Perth AU-->
+    
     
 </body>
 </html>
