--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
              
               <input class="form-control mr-sm-2" type="text" placeholder="City" id="city-input">
               <input class="form-control mr-sm-2" type="text" placeholder="Country" id="country-input">
-              <button class="btn btn-outline-success my-2 my-sm-0" type="submit" id=search-button>Search</button>
+              <button class="btn" type="submit" id=search-button>Search</button>
 
           </form>
                    
